roles/create-cluster/files/ingress_monitoring.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: ingress-nginx
  annotations:
   kubernetes.io/ingress.class: nginx

spec:
  rules:
  - host: grafana.conectado.local
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
        
  - host: prometheus.conectado.local
    http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 9090
        path: /
